# mlops-training-area

./: .env.example  .gitignore  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml  spider_data.zip.dvc
.dvc/: config
.github/workflows/: ci.yml
flows/: inference.py  offline_data.py  training.py
infra/: docker-compose.yml
infra/docker/: Dockerfile.pipeline  Dockerfile.serving  Dockerfile.train  entrypoint.sh
reports/: eval_schema_pruner.json  prune_report.json  registration.json  train_report.json  validation.json
src/sqlgen/: __init__.py  config.py  storage.py  tracking.py
src/sqlgen/artifacts/: mirror.py  s3.py  storage.py
src/sqlgen/clients/: config.py  database.py  vllm.py
src/sqlgen/data/: build_labels.py  extract_pairs.py  extract_schema.py  ingest.py  io.py  prune.py  schema.py  validate.py
src/sqlgen/evaluation/: pruner.py
src/sqlgen/features/: build_dataset.py
src/sqlgen/orchestration/: deps.py  graph.py  nodes.py  routing.py  service.py  state.py
src/sqlgen/orchestration/nodes/: execute.py  failure.py  generate.py  present.py  (+2 more)
src/sqlgen/presenter/: __init__.py  runner.py
src/sqlgen/prompts/: presenter.py  pruner.py  sqlgen.py
src/sqlgen/registry/: promotion.py  register_pruner.py  resolve.py
src/sqlgen/serving/: app.py  prepare.py
src/sqlgen/training/: dataset.py  evaluate.py  mirror.py  model.py  train.py
tests/: test_inference_stream.py  test_langgraph_orchestration.py  test_model_registry.py  test_output_parsing.py  test_presenter_prompt.py  test_promotion.py  test_prompts.py  test_prune.py  test_pruner_metrics.py  test_schema.py  test_sqlgen_prompt.py
