[project]
name = "sqlgen-mlops"
version = "0.1.0"
description = "Text-to-SQL MLOps project: schema-pruner + sqlgen LLMs (data pipelines)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc[s3]>=3.55",
    "prefect>=3.1",
    "sqlglot>=25.0",
    "pydantic>=2.9",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sqlgen"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]
