[project]
name = "sqlgen-mlops"
version = "0.1.0"
description = "Text-to-SQL MLOps project: schema-pruner + sqlgen LLMs (data pipelines)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc[s3]>=3.55",
    "prefect>=3.1",
    "sqlglot>=25.0",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "langgraph>=0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

# heavy training stack, opt-in: uv sync --extra train
[project.optional-dependencies]
train = [
  "torch>=2.4", "transformers>=4.46", "peft>=0.13", "trl>=0.20",
  "datasets>=3.0", "accelerate>=1.0", "mlflow>=2.18",
  "bitsandbytes>=0.43",  # 4-bit QLoRA quantization
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sqlgen"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]
